# Andrey

./: .gitignore  LICENSE  README.md  config.example.yaml  mobile_agent_cli.py  pyproject.toml  requirements.txt  setup.py  test_debug_prompt.py
examples/: basic_example.py  model_selection_example.py  test_cheap_model.py  test_coordinate_fix.py  test_detailed_logging.py  test_without_openai.py  youtube_example.py
game_profiles/: default.yaml  spades.yaml
mobile_agent/: __init__.py  action_executor.py  adb_controller.py  agent.py  config.py  vision_analyzer.py
src/andrey/: __init__.py  agent.py  cli.py  config.py  device.py  logger.py  models.py  omniparser.py  prompts.py  vision.py
